--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,20 @@
 	      android:paddingRight="@dimen/activity_horizontal_margin"
 	      android:paddingTop="@dimen/activity_vertical_margin"
 	      tools:context="com.adda.ours.ringtonerandomizer.MainActivity">
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content">
+		<Button
+			android:id="@+id/randomize_tones"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Randomize tones"/>
+		<Button
+			android:id="@+id/stop"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:text="Stop"/>
+	</LinearLayout>
 
 	<TextView
       android:id="@+id/ringtone_list"
