--- a/app/src/main/res/layout/a_ringtone_layout.xml
+++ b/app/src/main/res/layout/a_ringtone_layout.xml
@@ -2,4 +2,6 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/a_ringtone"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    android:textSize="17sp"
+    android:padding="7dp"/>
