--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/white"
     tools:context="com.adda.ours.ringtonerandomizer.MainActivity">
 
   <LinearLayout
@@ -21,6 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_gravity="center"
+        android:layout_margin="2dp"
         android:text="Randomize tones" />
 
     <Button
@@ -30,6 +32,8 @@
         android:layout_weight="1"
         android:layout_gravity="center"
         android:text="@string/add_tone"
+        android:layout_margin="2dp"
+        android:background="@color/blue"
         />
   </LinearLayout>
 
